[project]
name = "invoice-processing-rl-env"
version = "0.1.0"
description = "Invoice Processing Reinforcement Learning Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "requests",
    "pydantic",
    "openai",
    "python-dotenv"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
